--- a/Project.toml
+++ b/Project.toml
@@ -9,11 +9,13 @@ CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 
 [compat]
 CodecBzip2 = "0.7"
 CodecXz = "0.7"
 CodecZlib = "0.7"
+TranscodingStreams = "0.9"
 julia = "^1"
 
 [extras]
