Rename package from MRC to MRCFile

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "MRC"
+name = "MRCFile"
 uuid = "c18c01d3-0ab9-49c3-bd2d-8f2e64a2b7a5"
 authors = ["Seth Axen <seth.axen@gmail.com>"]
 version = "0.1.0"
