Update e-mail address

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MRCFile"
 uuid = "c18c01d3-0ab9-49c3-bd2d-8f2e64a2b7a5"
-authors = ["Seth Axen <seth.axen@gmail.com>"]
+authors = ["Seth Axen <seth@sethaxen.com>"]
 version = "0.1.0"
 
 [deps]
