--- a/Project.toml
+++ b/Project.toml
@@ -20,8 +20,9 @@ TranscodingStreams = "0.9"
 julia = "^1"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 
 [targets]
-test = ["Test", "PyCall"]
+test = ["Test", "PyCall", "Conda"]
