--- a/Project.toml
+++ b/Project.toml
@@ -20,9 +20,9 @@ TranscodingStreams = "0.9"
 julia = "^1"
 
 [extras]
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 
 [targets]
-test = ["Test", "PyCall", "Conda"]
+test = ["Test", "CondaPkg", "PythonCall"]
