--- a/Project.toml
+++ b/Project.toml
@@ -25,4 +25,4 @@ PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "CondaPkg", "PythonCall"]
+test = ["CondaPkg", "PythonCall", "Test"]
