--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MRCFile"
 uuid = "c18c01d3-0ab9-49c3-bd2d-8f2e64a2b7a5"
 authors = ["Seth Axen <seth@sethaxen.com>"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
 CodecBzip2 = "523fee87-0ab8-5b00-afb7-3ecf72e48cfd"
@@ -20,7 +20,9 @@ TranscodingStreams = "0.9"
 julia = "^1"
 
 [extras]
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["CondaPkg", "PythonCall", "Test"]
