--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 CodecBzip2 = "0.7"
 CodecXz = "0.7"
 CodecZlib = "0.7"
+Statistics = "1"
 TranscodingStreams = "0.9"
 julia = "^1"
 
