--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ CodecBzip2 = "0.7, 0.8"
 CodecXz = "0.7"
 CodecZlib = "0.7"
 Statistics = "1"
-TranscodingStreams = "0.9, 0.10"
+TranscodingStreams = "0.9, 0.10, 0.11"
 julia = "^1"
 
 [extras]
