--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ['1.3', 1]
+        version: ['1.3', 1, 'pre']
         os:
           - ubuntu-latest
           - macOS-latest
